@@ -1,2 +1,8 @@
 cassandra-universal-driver
 ==========================
+
+www.cassandradriver.com
+
+V. 1.12
+by Carles Mateo
+blog.carlesmateo.com
