@@ -33,6 +33,7 @@ if (isset($_POST['format']) && $_POST['format'] == 'html') {
 
 ?><html>
     <head>
+        <meta charset="UTF-8">
         <title>PHP Cassandra Universal Driver Sample</title>
     </head>
     <body>
